--- a/TicTacIOiOS-OC/Podfile
+++ b/TicTacIOiOS-OC/Podfile
@@ -6,4 +6,4 @@ pod 'Socket.IO-Client-Swift', '~> 6.1.1' # Or latest version
 pod 'MJExtension', '~>3.0.10'
 pod 'JSMessagesViewController', '~> 4.0.5'
 pod 'AFNetworking', '~>3.1.0'
-
+pod 'SDWebImage', '~>3.7'
