--- a/TicTacIOiOS-OC/Podfile
+++ b/TicTacIOiOS-OC/Podfile
@@ -7,3 +7,4 @@ pod 'MJExtension', '~>3.0.10'
 pod 'JSQMessagesViewController'
 pod 'AFNetworking', '~>3.1.0'
 pod 'SDWebImage', '~>3.7'
+pod 'MJRefresh', '~> 3.1.0'
