--- a/TicTacIOiOS-OC/Podfile
+++ b/TicTacIOiOS-OC/Podfile
@@ -8,3 +8,5 @@ pod 'JSQMessagesViewController'
 pod 'AFNetworking', '~>3.1.0'
 pod 'SDWebImage', '~>3.7'
 pod 'MJRefresh', '~> 3.1.0'
+pod 'MBProgressHUD', '~> 0.9.2'
+
