--- a/TicTacIOiOS-OC/Podfile
+++ b/TicTacIOiOS-OC/Podfile
@@ -9,4 +9,4 @@ pod 'AFNetworking', '~>3.1.0'
 pod 'SDWebImage', '~>3.7'
 pod 'MJRefresh', '~> 3.1.0'
 pod 'MBProgressHUD', '~> 0.9.2'
-
+pod 'FMDB', '~> 2.2'
